ctm-sf-homeloan-app/main/default/objects/LatePayment__c/LatePayment__c.object-meta.xml
<CustomObject>
    <label>Late Payment</label>
    <nameField>
        <displayFormat>LP-{0000000}</displayFormat>
        <label>Late Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Late Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>