ctm-sf-homeloan-app/main/default/objects/LatePayment__c/fields/AccountRef__c.field-meta.xml
<CustomField>
    <fullName>AccountRef__c</fullName>
    <label>Account Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>