ctm-sf-homeloan-app/main/default/objects/LatePayment__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>