ctm-sf-homeloan-app/main/default/objects/LatePayment__c/fields/CreditScore__c.field-meta.xml
<CustomField>
    <fullName>CreditScore__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Credit Score</label>
    <referenceTo>CreditScore__c</referenceTo>
    <relationshipLabel>Late Payments</relationshipLabel>
    <relationshipName>Late_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>