ctm-sf-homeloan-app/main/default/objects/LatePayment__c/fields/LastReported__c.field-meta.xml
<CustomField>
    <fullName>LastReported__c</fullName>
    <label>Last Reported</label>
    <type>Date</type>
</CustomField>